objects/ReportIds__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ReportId__c</fullName>
        <label>ReportId</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Category__c</fullName>
        <label>Report Category</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>ReportIds</label>
</CustomObject>